@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-04-09T01:04:11Z",
+  "timestamp" : "2022-04-10T01:08:24Z",
   "count_outdated" : 212,
   "uniques_outdated" : 90,
-  "count" : 242,
-  "uniques" : 106,
+  "count" : 243,
+  "uniques" : 107,
   "views" : [
     {
       "timestamp": "2022-03-28T00:00:00Z",
@@ -56,6 +56,13 @@
     },
     {
       "timestamp": "2022-04-07T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-04-09T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
