@@ -1,6 +1,6 @@
 {
-  "count": 30,
-  "uniques": 15,
+  "count": 31,
+  "uniques": 16,
   "views": [
     {
       "timestamp": "2022-03-28T00:00:00Z",
@@ -39,6 +39,11 @@
     },
     {
       "timestamp": "2022-04-07T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-04-09T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
